--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="order_normal">Normal order</string>
     <string name="order_random">Random order</string>
     <string name="order_repeat_all">Repeat all tracks</string>
+    <string name="error_loading_track">Error loading %1$s</string>
 </resources>
